fixed spacing and styling, and added basic list ui

--- a/pages/Transactions/Transactions.module.css
+++ b/pages/Transactions/Transactions.module.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   width: 100%;
   padding-left: 0%;
-  padding-top: 10%;
+  padding-top: 8%;
   padding-left: 5%;
   padding-right: 5%;
 }
@@ -18,10 +18,11 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  height: 100%;
+  height: 35px;
+  margin-bottom: 2%;
 }
 
-.buttonContainer {
+.button-container {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -34,6 +35,7 @@
   height: 33px;
   font-size: 14px;
   margin-right: 20px;
+  text-transform: none;
 }
 
 .button:hover {
@@ -45,26 +47,70 @@
   height: 100%;
 }
 
-.tabbox {
-  height: 100%;
+.tab-box {
+  height: fit-content;
+  padding: 0%;
   border: 2px solid #ebebeb;
-  border-top: 0px;
-  border-radius: 0px 0px 10px 10px;
+  border-radius: 0px 10px 10px 10px;
 }
 
-.seltab {
+.sel-tab {
   border: 2px solid #ebebeb;
-  border-bottom: 0px;
   border-radius: 10px 10px 0px 0px;
-  min-width: 10vw;
+  min-width: 8vw;
   margin-right: 7px;
   color: #646464;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #646464;
+  text-underline-offset: 6px;
+  text-transform: none;
 }
 
 .tab {
-  min-width: 10vw;
+  min-width: 8vw;
   margin-right: 7px;
   background-color: #ebebeb;
   border-radius: 10px 10px 0px 0px;
   color: #646464;
+  text-transform: none;
+}
+
+.filter-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 36px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.section-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 46px;
+  align-items: center;
+  background-color: #EBEBEB;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.list {
+  padding-top: 0%;
+  padding-bottom: 0%;
+}
+
+.list-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 2%;
+  padding-right: 2%;
+  height: 62px;
+  border-top: 1px solid #EBEBEB;
 }
